# Deep-Learning

hw1_backpropagation_feedforward/: hw1_learning_curves.py  log
hw1_backpropagation_feedforward/my_neural_networks/: activations.py  networks.py
hw2_optimizers_regularization_CNN_CGCNN/: ReadMe  interface.sh  main.py  models.py  optimizers.py  rf-5.npy  visualize.py
hw3_GNN_HMC/: download.py  interface.sh  main_ddi.py  pyproject.toml  scholar.sh  vis.py
hw3_GNN_HMC/models/: gcn.py  hmc.py
